k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sentinel-namespace
  name: sentinel-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentinel-namespace
  template:
    metadata:
      labels:
        app: sentinel-namespace
    spec:
      serviceAccountName: sentinel-san
      containers:
      - env:
        - name: PYTHONUNBUFFERED # used to print to stderr and stdout asap
          value: "1"
        - name: admin-log-length # used in the ui to load the last 200 log entries
          value: "200"
        - name: default-log-length # used to limit to the last 1000 lines of the logs of a container/pod
          value: "1000"
        - name: requests-timeout # in milliseconds, the time it will wait before timing out a request made by the server to a resource
          value: "15000"
        - name: telegram-api-token # if using telegram notifications, use the api token
          value: replaceme
        - name: telegram-channel # if using telegram notifications, the channel id where to print messaegs
          value: "123456789"
        - name: db-user # name of the user to log in for the sentinel database, defined in this file
          value: root
        - name: db-passwd # password of above
          value: cPehkP5bbNJMt6Ao
        - name: db-host # host of the above
          value: sentineldb
        - name: db-port # port of the above
          value: "3306"
        - name: smtp-server # host of the mail service if email are set up
          value: change.me.com
        - name: smtp-port # port for smtp (usually 587)
          value: "587"
        - name: sender-email # email address of the sender of the emails
          value: change@at.me
        - name: sender-email-password # password of the sender of the emails
          value: replacethispassword
        - name: email-recipients # python string representation of the list of recipients of the emails
          value: '["first_address@to.besent", "second_address@to.besent", "more_addresses@to.besent"]'
        - name: platform-url # appears on top left of the main sentinel UI
          value: http://someurl.com
        - name: platform-explanation # appears in mail/telegram notifications as additional text; is supposed to explain what the sentinel is checking and where/how can it be reached
          value: Some information
        - name: running-as-kubernetes # must be kept as is to mandate kubernetes execution
          value: "True"  
        - name: conf-path # where to retrieve the snap4city distribution for generating distributions; it assumes that the path is also reachable, so mind how you mount it
          value: "/mnt/data/sentinel/fakeconf/fakeconf" 
        - name: cluster-secret # in case of a sentinel cluster, this secret will ensure the reciprocal authentication (unused)
          value: "This is a super secret" #eg
        - name: namespaces # list of namespaces to manage
          value: '["n1", "n2"]'
        - name: log-previous-container-if-kubernetes # unset if not used
          value: "true"
        - name: unsafe-mode # allows for non-container elements to be managed, unsafe as it allows arbitrary code execution on pod/host, set to "true" to activate
          value: "true"
        - name: database-update-frequency
          value: "5" # minutes
        - name: error-notification-frequency
          value: "5" # minutes
        - name: application-root # for serving behind nginx
          value: "/sentinel"
        ### for kubernetes envirnoments, this is supposed to be left unset ###
        #- name: is-multi
        #  value: "False"
        image: fabriziomereu/sentinel:v0.5.19
        #command: ["sleep", "3600"]
        name: k8sentinel
        volumeMounts:
        - mountPath: /app/users.txt
          name: sentinel-claim001
        - mountPath: /mnt/data/sentinel-confs
          name: sentinel-claim002
        - mountPath: /app/data
          name: sentinel-claim003
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "4G"
            cpu: "1.0"
      volumes:
      - name: sentinel-claim001
        persistentVolumeClaim:
          claimName: sentinel-claim001
      - name: sentinel-claim002
        persistentVolumeClaim:
          claimName: sentinel-claim002
      - name: sentinel-claim003
        persistentVolumeClaim:
          claimName: sentinel-claim003
---
apiVersion: v1
kind: Service
metadata:
  name: sentinel-service
spec:
  type: NodePort
  ports:
    - name: "9080"
      port: 9080
      nodePort: 32080
      targetPort: 9080
  selector:
    app: sentinel-namespace
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: sentineldb
  name: sentineldb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sentineldb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: sentineldb
    spec:
      containers:
        - env:
          - name: MYSQL_ALLOW_EMPTY_PASSWORD
            value: "no"
          - name: MYSQL_DATABASE
            value: checker
          - name: MYSQL_PASSWORD
            value: 7fBluEbtiEWZgiJs
          - name: MYSQL_ROOT_PASSWORD
            value: cPehkP5bbNJMt6Ao
          - name: MYSQL_USER
            value: user
          - name: TZ
            value: Europe/Rome
          image: mariadb:10.3
          name: sentineldb
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "1.0"
          ports:
          - containerPort: 3306
          volumeMounts:
          - mountPath: /docker-entrypoint-initdb.d/z_init.sql
            name: sentineldb-claim001
          - mountPath: /etc/mysql/mariadb.conf.d
            name: sentineldb-claim002
          - mountPath: /var/lib/mysql
            name: sentineldb-claim003
    
      volumes:
      - name: sentineldb-claim001
        persistentVolumeClaim:
          claimName: sentineldb-claim001
      - name: sentineldb-claim002
        persistentVolumeClaim:
          claimName: sentineldb-claim002
      - name: sentineldb-claim003
        persistentVolumeClaim:
          claimName: sentineldb-claim003
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: sentineldb
  name: sentineldb
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
    io.kompose.service: sentineldb
  type: NodePort
