ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sentinel-ingress
  namespace: sentinel-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/sentinel"

spec:
  ingressClassName: nginx
  rules:
  - host: sentinel.test
    http:
      paths:
      - path: /sentinel(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: sentinel-service
            port:
              number: 9080
